@@ -123,7 +123,7 @@ const cl_LF sinx_naive (const cl_LF& x)
 
 	if (zerop(x))
 		return x;
-	var uintL actuallen = TheLfloat(x)->len;
+	var uintC actuallen = TheLfloat(x)->len;
 	var uintC d = float_digits(x);
 	var sintE e = float_exponent(x);
 	if (e <= (-(sintC)d)>>1) // e <= (-d)/2 <==> e <= -ceiling(d/2) ?
